--- a/App.config
+++ b/App.config
@@ -12,4 +12,15 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+  <connectionStrings>
+    <add name="ProductDatabaseEntities" connectionString="metadata=res://*/Model.ProductDatabaseEntities.csdl|res://*/Model.ProductDatabaseEntities.ssdl|res://*/Model.ProductDatabaseEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-81AELAQ;initial catalog=master;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
