--- a/FurnitureStoreApp.csproj
+++ b/FurnitureStoreApp.csproj
@@ -128,6 +128,7 @@
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.Diagnostics.DiagnosticSource.5.0.0\lib\net46\System.Diagnostics.DiagnosticSource.dll</HintPath>
     </Reference>
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.Memory.4.5.4\lib\net461\System.Memory.dll</HintPath>
     </Reference>
@@ -146,6 +147,7 @@
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -204,6 +206,9 @@
     <Compile Include="View\NewCostumerView.xaml.cs">
       <DependentUpon>NewCostumerView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\PurchasesListView.xaml.cs">
+      <DependentUpon>PurchasesListView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\StorageView.xaml.cs">
       <DependentUpon>StorageView.xaml</DependentUpon>
     </Compile>
@@ -228,6 +233,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\NewCostumerView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\PurchasesListView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -279,13 +288,12 @@
     <Resource Include="Assets\customer_button.png" />
     <Resource Include="Assets\menu.png" />
     <Resource Include="Assets\new_customer_button.png" />
-    <Resource Include="Assets\to_PDF_button.png" />
-    <Resource Include="Assets\to_PDF_button_MouseOver.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Assets\storage.png" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Assets\purchase.png" />
     <Content Include="Model\ProductDatabaseEntities.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>ProductDatabaseEntities.edmx</DependentUpon>
